--- a/src/app/modules/workers-and-shops/workers-and-shops-page/workers-and-shops-page.component.html
+++ b/src/app/modules/workers-and-shops/workers-and-shops-page/workers-and-shops-page.component.html
@@ -1,1 +1,10 @@
-<p>workers-and-shops-page works!</p>
+<div class="container workers-shops">
+  <div class="workers-shops-wrapper">
+    <div class="col-half">
+      <super-workers></super-workers>
+    </div>
+    <div class="col-half">
+      <super-shops></super-shops>
+    </div>
+  </div>
+</div>
