(upd) workers tabs added (mat-tabs)

--- a/src/app/modules/workers-and-shops/workers-and-shops-page/workers-and-shops-page.component.html
+++ b/src/app/modules/workers-and-shops/workers-and-shops-page/workers-and-shops-page.component.html
@@ -1,9 +1,9 @@
 <div class="container workers-shops">
   <div class="workers-shops-wrapper">
-    <div class="col-half">
+    <div class="col">
       <super-workers></super-workers>
     </div>
-    <div class="col-half">
+    <div class="col">
       <super-shops></super-shops>
     </div>
   </div>
