--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,4 +1,6 @@
 $super-color-bg: #FAFAFA;
 $super-color-bg-dark: #F2F2F2;
+$super-color-bg-text: #4F4F4F;
+$super-color-bg-text-faded: #8F8F8F;
 $super-color-warn: #FF9500;
 $super-color-accent: #007AFF;
