--- a/src/app/modules/workers-and-shops/workers/workers.component.scss
+++ b/src/app/modules/workers-and-shops/workers/workers.component.scss
@@ -8,13 +8,16 @@
   align-items: center;
 
   width: 100%;
+  min-height: 90px;
 
   &__tabs {
-    width: 100%;
+    display: flex;
   }
 }
 
 .worker-nav-tab {
+  position: relative;
+  flex: 1 0 auto;
   height: 90px;
   width: 90px;
   margin: 0 7px;
@@ -23,14 +26,38 @@
   border-top-left-radius: 50%;
 
   background: #ffffff;
-  box-shadow: 0 0 10px;
-}
+  opacity: .85;
 
-.worker-avatar {
-  width: 100%;
-  height: 100%;
-  padding: 15px;
-  border-radius: 100%;
+  &__avatar {
+    width: 100%;
+    height: 100%;
+    padding: 15px;
+    border-radius: 100%;
+  }
+
+  &--active {
+    opacity: 1;
+    box-shadow: 0 0 10px;
+  }
+
+  &:first-child {
+    margin-left: 0;
+  }
+
+  &:last-child {
+    margin-right: 0;
+  }
+
+  &:after {
+    content: '';
+    z-index: 99;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ffffff;
+    height: 18px;
+  }
 }
 
 .button-add-worker {
@@ -50,5 +77,71 @@
     z-index: 9;
     position: absolute;
     right: 5px;
+  }
+}
+
+.worker-container {
+  z-index: 9;
+  width: 100%;
+  height: 100%;
+  padding: 35px;
+  border-radius: 0 15px 15px 15px;
+
+  background-color: #ffffff;
+
+  box-shadow: 0 0 15px;
+
+  &--empty {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+
+    padding: 0;
+    border: 2px dashed $super-color-bg-text-faded;
+    border-radius: 15px;
+
+    text-align: center;
+    color: $super-color-bg-text-faded;
+
+    background-color: $super-color-bg-dark;
+    box-shadow: none;
+
+    h3, p {
+      margin-bottom: 30px;
+
+    }
+
+    h3 {
+      text-transform: uppercase;
+      color: $super-color-bg-text;
+    }
+
+    .add-person-icon {
+      font-size: 50px;
+    }
+  }
+}
+
+.worker-info {
+  &__part-header {
+    color: $super-color-bg-text-faded;
+    font-weight: 300;
+  }
+
+  &__name {
+    display: flex;
+    align-items: center;
+
+    height: 90px;
+    padding: 10px 0;
+  }
+
+  &__avatar {
+    padding: 7px 0;
+    border-radius: 100%;
+
+    object-fit: contain;
+    object-position: left;
   }
 }
