--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,7 +51,7 @@ body {
   overflow-y: hidden;
 
   width: 100%;
-}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-size: 14px;
+}
