--- a/src/app/modules/workers-and-shops/shops/shops.component.html
+++ b/src/app/modules/workers-and-shops/shops/shops.component.html
@@ -1,1 +1,22 @@
-<p>shops works</p>
+<div class="shops__header-wrapper">
+  <h4 class="shops__header header">Нераспределенные магазины:</h4>
+  <span class="shops__count">{{1}}</span>
+  <span class="shops__warn">
+    <mat-icon class="shops__warn__icon" color="accent" inline>warning</mat-icon>
+  </span>
+</div>
+
+<div *ngFor="let s of shops; trackBy: trackById" class="shop">
+  <div class="move-button-wrapper">
+    <button class="move-button" mat-icon-button>
+      <mat-icon inline>arrow_right_alt</mat-icon>
+    </button>
+  </div>
+
+  <div class="shop__logo">SBS</div>
+  <div class="shop__info">
+    <div class="shop__info__name">{{s.name}}</div>
+    <div class="shop__info__address">{{s.fullAddress}}</div>
+  </div>
+</div>
+
