--- a/src/app/modules/workers-and-shops/workers-and-shops-page/workers-and-shops-page.component.html
+++ b/src/app/modules/workers-and-shops/workers-and-shops-page/workers-and-shops-page.component.html
@@ -4,7 +4,7 @@
       <super-workers></super-workers>
     </div>
     <div class="col">
-      <super-shops></super-shops>
+      <super-shops (movedShop)="onShopMove($event)"></super-shops>
     </div>
   </div>
 </div>
