--- a/src/app/modules/workers-and-shops/shops/shops.component.html
+++ b/src/app/modules/workers-and-shops/shops/shops.component.html
@@ -6,16 +6,16 @@
   </span>
 </div>
 
-<div *ngFor="let s of shops; trackBy: trackById" class="shop">
+<div *ngFor="let s of shops; trackBy: trackById" class="shop shop-info">
   <div class="move-button-wrapper">
     <button (click)="onMoveButtonClick(s)" class="move-button" mat-icon-button>
       <mat-icon inline>arrow_right_alt</mat-icon>
     </button>
   </div>
 
-  <div class="shop__logo">SBS</div>
-  <div class="shop__info">
-    <div class="shop__info__name">{{s.name}}</div>
+  <div class="shop__logo shop-info__logo">SBS</div>
+  <div class="shop__info shop-info__wrapper">
+    <div class="shop__info__name shop-info__name">{{s.name}}</div>
     <div class="shop__info__address">{{s.fullAddress}}</div>
   </div>
 </div>
