--- a/src/app/modules/workers-and-shops/workers-and-shops-page/workers-and-shops-page.component.html
+++ b/src/app/modules/workers-and-shops/workers-and-shops-page/workers-and-shops-page.component.html
@@ -1,7 +1,10 @@
 <div class="container workers-shops">
   <div class="workers-shops-wrapper">
     <div class="col">
-      <super-workers></super-workers>
+      <super-workers
+        (removedShop)="onShopDeleteFromWorker($event)"
+        (removedWorker)="onWorkerDelete($event)"
+      ></super-workers>
     </div>
     <div class="col">
       <super-shops (movedShop)="onShopMove($event)"></super-shops>
