--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,9 @@
 @import "colors";
 @import "material";
 
+// PerfectScrollBar styles
+@import '~perfect-scrollbar/css/perfect-scrollbar.css';
+
 .header {
   color: $super-color-text-faded;
   font-weight: 300;
