--- a/src/app/modules/workers-and-shops/shops/shops.component.scss
+++ b/src/app/modules/workers-and-shops/shops/shops.component.scss
@@ -20,6 +20,19 @@
   }
 }
 
+.shop-info-container {
+  position: relative;
+  height: 100%;
+}
+
+.shop-info-wrapper {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  //height: 100%;
+}
+
 .move-button-wrapper {
   transform: scaleX(-1);
 }
