--- a/src/app/modules/workers-and-shops/workers-and-shops-page/workers-and-shops-page.component.scss
+++ b/src/app/modules/workers-and-shops/workers-and-shops-page/workers-and-shops-page.component.scss
@@ -26,6 +26,7 @@
 }
 
 .shops {
+  flex: auto;
   display: flex;
   flex-flow: column;
 
@@ -49,6 +50,7 @@
     font-size: 1.1em;
     width: 335px;
     margin-bottom: 25px;
+    margin-left: auto;
     line-height: 65px;
   }
 }
