--- a/src/app/modules/workers-and-shops/shops/shops.component.scss
+++ b/src/app/modules/workers-and-shops/shops/shops.component.scss
@@ -17,20 +17,8 @@
     margin-left: 11px;
     font-size: 16px;
     line-height: 16px;
+    color: $super-color-warn;
   }
-}
-
-.shop-info-container {
-  position: relative;
-  height: 100%;
-}
-
-.shop-info-wrapper {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  //height: 100%;
 }
 
 .move-button-wrapper {
