--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -56,3 +56,16 @@
     font-weight: 300;
   }
 }
+
+
+.scrollable-container {
+  position: relative;
+  height: 100%;
+}
+
+.scrollable-content-wrapper {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+}
